peach/app/counter-api/config/workload.yaml
#@ load("@ytt:data", "data")
apiVersion: v1
kind: Service
metadata:
  name: counter-api
  namespace: blog
  annotations:
    kapp.k14s.io/change-group: workload
  labels:
    app: counter-api
    app.kubernetes.io/part-of: counter-api
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: counter-api
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counter-api
  namespace: blog
  annotations:
    kapp.k14s.io/change-group: workload
  labels:
    app: counter-api
    app.kubernetes.io/part-of: counter-api
spec:
  replicas: #@ data.values.replicas
  selector:
    matchLabels:
      app: counter-api
  template:
    metadata:
      annotations:
        github.com/revision: #@ data.values.git_revision
      labels:
        app: counter-api
        app.kubernetes.io/part-of: counter-api
    spec:
      containers:
      - env:
        - name: PORT
          value: "8080"
        - name: RUST_LOG
          value: info
        - name: DATABASE_URL
          valueFrom:
            secretKeyRef:
              key: database-url
              name: counter-config
        image: #@ data.values.image
        imagePullPolicy: IfNotPresent
        name: workload
        ports:
        - containerPort: 8080
          name: user-port
          protocol: TCP
        resources:
          limits:
            memory: 64Mi
          requests:
            memory: 64Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          runAsNonRoot: true
          runAsUser: 1002
          seccompProfile:
            type: RuntimeDefault
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app: counter-api
              topologyKey: kubernetes.io/hostname
            weight: 1
